@@ -1,6 +1,11 @@
 2008-03-05  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.RegexToolkit/RegexToolkitWindow.cs,
+	  gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs: Set type wink
+
+2008-03-05  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.RegexToolkit/RegexToolkitWindow.cs,
 	  gtk-gui/MonoDevelop.RegexToolkit.RegexToolkitWindow.cs,
 	  gtk-gui/gui.stetic: Changed start position.
 
